--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,7 @@ aiohttp==3.11.14
 aioice==0.9.0
 aiortc==1.10.1
 aiosignal==1.3.2
+alabaster==0.7.16
 albucore==0.0.23
 albumentations==1.4.24
 altair==5.5.0
@@ -17,7 +18,8 @@ attrs==25.3.0
 av==13.1.0
 azure-core==1.32.0
 azure-identity==1.21.0
-beautifulsoup4==4.12.3
+babel==2.17.0
+beautifulsoup4==4.12.2
 blinker==1.9.0
 cachetools==5.5.2
 certifi==2024.12.14
@@ -39,12 +41,15 @@ Deprecated==1.2.18
 deprecation==2.1.0
 distro==1.9.0
 dnspython==2.7.0
+docutils==0.19
 et-xmlfile==1.1.0
 executing==2.1.0
+fastjsonschema==2.21.1
 filelock==3.16.1
 fire==0.7.0
 flatbuffers==24.12.23
 fonttools==4.53.1
+fpdf==1.7.2
 frozenlist==1.5.0
 fsspec==2024.9.0
 gast==0.6.0
@@ -53,6 +58,8 @@ GitPython==3.1.44
 google-crc32c==1.7.0
 google-pasta==0.2.0
 grpcio==1.68.1
+gym==0.26.2
+gym-notices==0.0.8
 h11==0.14.0
 h5py==3.12.1
 httpcore==1.0.7
@@ -60,6 +67,7 @@ httpx==0.28.1
 idna==3.10
 ifaddr==0.2.0
 imageio==2.36.0
+imagesize==1.4.1
 importlib_metadata==8.6.1
 ipykernel==6.29.5
 ipython==8.27.0
@@ -96,8 +104,11 @@ msal-extensions==1.3.1
 multidict==6.2.0
 namex==0.0.8
 narwhals==1.32.0
+nbformat==5.10.4
 nest-asyncio==1.6.0
 networkx==3.4.1
+nltk==3.9.1
+none==0.1.1
 numpy==1.26.4
 openai==1.70.0
 openapi-core==0.18.2
@@ -116,6 +127,8 @@ pandas==2.2.2
 parse==1.20.2
 parso==0.8.4
 pathable==0.4.4
+pdfminer.six==20221105
+pdfplumber==0.9.0
 pillow==10.4.0
 platformdirs==4.3.1
 prance==23.6.21.0
@@ -139,8 +152,10 @@ pylibsrtp==0.11.0
 PyMeta3==0.5.1
 pyOpenSSL==25.0.0
 pyparsing==3.1.4
+PyPDF2==3.0.1
 pyserial==3.5
 python-dateutil==2.9.0.post0
+python-docx==1.1.2
 python-dotenv==1.0.0
 python-pptx==1.0.2
 pytz==2024.1
@@ -149,8 +164,10 @@ PyYAML==6.0.2
 pyzmq==26.2.0
 referencing==0.30.2
 regex==2023.12.25
+reportlab==4.3.1
 requests==2.32.3
 rfc3339-validator==0.1.4
+rfc3986==2.0.0
 rich==13.9.4
 rpds-py==0.23.1
 ruamel.yaml==0.18.10
@@ -164,7 +181,16 @@ simsimd==6.2.1
 six==1.16.0
 smmap==5.0.2
 sniffio==1.3.1
+snowballstemmer==2.2.0
 soupsieve==2.6
+Sphinx==5.3.0
+sphinxcontrib-applehelp==2.0.0
+sphinxcontrib-devhelp==2.0.0
+sphinxcontrib-htmlhelp==2.1.0
+sphinxcontrib-jsmath==1.0.1
+sphinxcontrib-qthelp==2.0.0
+sphinxcontrib-serializinghtml==2.0.0
+sphinxcontrib-websupport==2.0.0
 stack-data==0.6.3
 streamlit==1.44.0
 stringzilla==3.11.2
@@ -187,6 +213,7 @@ typing-inspection==0.4.0
 typing_extensions==4.12.2
 tzdata==2024.1
 urllib3==2.3.0
+Wand==0.6.13
 watchdog==6.0.0
 wcwidth==0.2.13
 websockets==14.2
